generated/LuaParser.cpp

// Generated from Lua.g4 by ANTLR 4.7.2


#include "LuaVisitor.h"

#include "LuaParser.h"


using namespace antlrcpp;
using namespace antlr4;

LuaParser::LuaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

LuaParser::~LuaParser() {
  delete _interpreter;
}

std::string LuaParser::getGrammarFileName() const {
  return "Lua.g4";
}

const std::vector<std::string>& LuaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& LuaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ChunkContext ------------------------------------------------------------------

LuaParser::ChunkContext::ChunkContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LuaParser::BlockContext* LuaParser::ChunkContext::block() {
  return getRuleContext<LuaParser::BlockContext>(0);
}

tree::TerminalNode* LuaParser::ChunkContext::EOF() {
  return getToken(LuaParser::EOF, 0);
}

tree::TerminalNode* LuaParser::ChunkContext::SHEBANG() {
  return getToken(LuaParser::SHEBANG, 0);
}


size_t LuaParser::ChunkContext::getRuleIndex() const {
  return LuaParser::RuleChunk;
}

antlrcpp::Any LuaParser::ChunkContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitChunk(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::ChunkContext* LuaParser::chunk() {
  ChunkContext *_localctx = _tracker.createInstance<ChunkContext>(_ctx, getState());
  enterRule(_localctx, 0, LuaParser::RuleChunk);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LuaParser::SHEBANG) {
      setState(84);
      match(LuaParser::SHEBANG);
    }
    setState(87);
    block();
    setState(88);
    match(LuaParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

LuaParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LuaParser::StatContext *> LuaParser::BlockContext::stat() {
  return getRuleContexts<LuaParser::StatContext>();
}

LuaParser::StatContext* LuaParser::BlockContext::stat(size_t i) {
  return getRuleContext<LuaParser::StatContext>(i);
}

LuaParser::RetstatContext* LuaParser::BlockContext::retstat() {
  return getRuleContext<LuaParser::RetstatContext>(0);
}


size_t LuaParser::BlockContext::getRuleIndex() const {
  return LuaParser::RuleBlock;
}

antlrcpp::Any LuaParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::BlockContext* LuaParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, LuaParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LuaParser::FUNCTION)
      | (1ULL << LuaParser::LOCAL)
      | (1ULL << LuaParser::BREAK)
      | (1ULL << LuaParser::DO)
      | (1ULL << LuaParser::GOTO)
      | (1ULL << LuaParser::WHILE)
      | (1ULL << LuaParser::REPEAT)
      | (1ULL << LuaParser::FOR)
      | (1ULL << LuaParser::IF)
      | (1ULL << LuaParser::SEMI)
      | (1ULL << LuaParser::DCOLON)
      | (1ULL << LuaParser::LP)
      | (1ULL << LuaParser::NAME))) != 0)) {
      setState(90);
      stat();
      setState(95);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(97);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LuaParser::RETURN) {
      setState(96);
      retstat();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

LuaParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LuaParser::StatContext::SEMI() {
  return getToken(LuaParser::SEMI, 0);
}

LuaParser::VarDeclContext* LuaParser::StatContext::varDecl() {
  return getRuleContext<LuaParser::VarDeclContext>(0);
}

LuaParser::FunctioncallContext* LuaParser::StatContext::functioncall() {
  return getRuleContext<LuaParser::FunctioncallContext>(0);
}

LuaParser::LabelContext* LuaParser::StatContext::label() {
  return getRuleContext<LuaParser::LabelContext>(0);
}

tree::TerminalNode* LuaParser::StatContext::BREAK() {
  return getToken(LuaParser::BREAK, 0);
}

LuaParser::GotoStatContext* LuaParser::StatContext::gotoStat() {
  return getRuleContext<LuaParser::GotoStatContext>(0);
}

LuaParser::DoStatContext* LuaParser::StatContext::doStat() {
  return getRuleContext<LuaParser::DoStatContext>(0);
}

LuaParser::WhileStatContext* LuaParser::StatContext::whileStat() {
  return getRuleContext<LuaParser::WhileStatContext>(0);
}

LuaParser::RepeatStatContext* LuaParser::StatContext::repeatStat() {
  return getRuleContext<LuaParser::RepeatStatContext>(0);
}

LuaParser::IfStatContext* LuaParser::StatContext::ifStat() {
  return getRuleContext<LuaParser::IfStatContext>(0);
}

LuaParser::ForStatContext* LuaParser::StatContext::forStat() {
  return getRuleContext<LuaParser::ForStatContext>(0);
}

LuaParser::ForInStatContext* LuaParser::StatContext::forInStat() {
  return getRuleContext<LuaParser::ForInStatContext>(0);
}

LuaParser::FuncStatContext* LuaParser::StatContext::funcStat() {
  return getRuleContext<LuaParser::FuncStatContext>(0);
}

LuaParser::LocalFuncStatContext* LuaParser::StatContext::localFuncStat() {
  return getRuleContext<LuaParser::LocalFuncStatContext>(0);
}

LuaParser::LocalVarDeclContext* LuaParser::StatContext::localVarDecl() {
  return getRuleContext<LuaParser::LocalVarDeclContext>(0);
}


size_t LuaParser::StatContext::getRuleIndex() const {
  return LuaParser::RuleStat;
}

antlrcpp::Any LuaParser::StatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitStat(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::StatContext* LuaParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 4, LuaParser::RuleStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(114);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(99);
      match(LuaParser::SEMI);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(100);
      varDecl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(101);
      functioncall();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(102);
      label();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(103);
      match(LuaParser::BREAK);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(104);
      gotoStat();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(105);
      doStat();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(106);
      whileStat();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(107);
      repeatStat();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(108);
      ifStat();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(109);
      forStat();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(110);
      forInStat();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(111);
      funcStat();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(112);
      localFuncStat();
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(113);
      localVarDecl();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

LuaParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LuaParser::VarlistContext* LuaParser::VarDeclContext::varlist() {
  return getRuleContext<LuaParser::VarlistContext>(0);
}

tree::TerminalNode* LuaParser::VarDeclContext::EQL() {
  return getToken(LuaParser::EQL, 0);
}

LuaParser::ExplistContext* LuaParser::VarDeclContext::explist() {
  return getRuleContext<LuaParser::ExplistContext>(0);
}

tree::TerminalNode* LuaParser::VarDeclContext::SEMI() {
  return getToken(LuaParser::SEMI, 0);
}


size_t LuaParser::VarDeclContext::getRuleIndex() const {
  return LuaParser::RuleVarDecl;
}

antlrcpp::Any LuaParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::VarDeclContext* LuaParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, LuaParser::RuleVarDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    varlist();
    setState(117);
    match(LuaParser::EQL);
    setState(118);
    explist();
    setState(120);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(119);
      match(LuaParser::SEMI);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctioncallContext ------------------------------------------------------------------

LuaParser::FunctioncallContext::FunctioncallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LuaParser::VarOrExpContext* LuaParser::FunctioncallContext::varOrExp() {
  return getRuleContext<LuaParser::VarOrExpContext>(0);
}

std::vector<LuaParser::NameAndArgsContext *> LuaParser::FunctioncallContext::nameAndArgs() {
  return getRuleContexts<LuaParser::NameAndArgsContext>();
}

LuaParser::NameAndArgsContext* LuaParser::FunctioncallContext::nameAndArgs(size_t i) {
  return getRuleContext<LuaParser::NameAndArgsContext>(i);
}

tree::TerminalNode* LuaParser::FunctioncallContext::SEMI() {
  return getToken(LuaParser::SEMI, 0);
}


size_t LuaParser::FunctioncallContext::getRuleIndex() const {
  return LuaParser::RuleFunctioncall;
}

antlrcpp::Any LuaParser::FunctioncallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitFunctioncall(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::FunctioncallContext* LuaParser::functioncall() {
  FunctioncallContext *_localctx = _tracker.createInstance<FunctioncallContext>(_ctx, getState());
  enterRule(_localctx, 8, LuaParser::RuleFunctioncall);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(122);
    varOrExp();
    setState(124); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(123);
              nameAndArgs();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(126); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
    setState(129);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(128);
      match(LuaParser::SEMI);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GotoStatContext ------------------------------------------------------------------

LuaParser::GotoStatContext::GotoStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LuaParser::GotoStatContext::GOTO() {
  return getToken(LuaParser::GOTO, 0);
}

tree::TerminalNode* LuaParser::GotoStatContext::NAME() {
  return getToken(LuaParser::NAME, 0);
}


size_t LuaParser::GotoStatContext::getRuleIndex() const {
  return LuaParser::RuleGotoStat;
}

antlrcpp::Any LuaParser::GotoStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitGotoStat(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::GotoStatContext* LuaParser::gotoStat() {
  GotoStatContext *_localctx = _tracker.createInstance<GotoStatContext>(_ctx, getState());
  enterRule(_localctx, 10, LuaParser::RuleGotoStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    match(LuaParser::GOTO);
    setState(132);
    match(LuaParser::NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DoStatContext ------------------------------------------------------------------

LuaParser::DoStatContext::DoStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LuaParser::DoStatContext::DO() {
  return getToken(LuaParser::DO, 0);
}

LuaParser::BlockContext* LuaParser::DoStatContext::block() {
  return getRuleContext<LuaParser::BlockContext>(0);
}

tree::TerminalNode* LuaParser::DoStatContext::END() {
  return getToken(LuaParser::END, 0);
}


size_t LuaParser::DoStatContext::getRuleIndex() const {
  return LuaParser::RuleDoStat;
}

antlrcpp::Any LuaParser::DoStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitDoStat(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::DoStatContext* LuaParser::doStat() {
  DoStatContext *_localctx = _tracker.createInstance<DoStatContext>(_ctx, getState());
  enterRule(_localctx, 12, LuaParser::RuleDoStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    match(LuaParser::DO);
    setState(135);
    block();
    setState(136);
    match(LuaParser::END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileStatContext ------------------------------------------------------------------

LuaParser::WhileStatContext::WhileStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LuaParser::WhileStatContext::WHILE() {
  return getToken(LuaParser::WHILE, 0);
}

LuaParser::ExpContext* LuaParser::WhileStatContext::exp() {
  return getRuleContext<LuaParser::ExpContext>(0);
}

tree::TerminalNode* LuaParser::WhileStatContext::DO() {
  return getToken(LuaParser::DO, 0);
}

LuaParser::BlockContext* LuaParser::WhileStatContext::block() {
  return getRuleContext<LuaParser::BlockContext>(0);
}

tree::TerminalNode* LuaParser::WhileStatContext::END() {
  return getToken(LuaParser::END, 0);
}


size_t LuaParser::WhileStatContext::getRuleIndex() const {
  return LuaParser::RuleWhileStat;
}

antlrcpp::Any LuaParser::WhileStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitWhileStat(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::WhileStatContext* LuaParser::whileStat() {
  WhileStatContext *_localctx = _tracker.createInstance<WhileStatContext>(_ctx, getState());
  enterRule(_localctx, 14, LuaParser::RuleWhileStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(138);
    match(LuaParser::WHILE);
    setState(139);
    exp(0);
    setState(140);
    match(LuaParser::DO);
    setState(141);
    block();
    setState(142);
    match(LuaParser::END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RepeatStatContext ------------------------------------------------------------------

LuaParser::RepeatStatContext::RepeatStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LuaParser::RepeatStatContext::REPEAT() {
  return getToken(LuaParser::REPEAT, 0);
}

LuaParser::BlockContext* LuaParser::RepeatStatContext::block() {
  return getRuleContext<LuaParser::BlockContext>(0);
}

tree::TerminalNode* LuaParser::RepeatStatContext::UNTIL() {
  return getToken(LuaParser::UNTIL, 0);
}

LuaParser::ExpContext* LuaParser::RepeatStatContext::exp() {
  return getRuleContext<LuaParser::ExpContext>(0);
}

tree::TerminalNode* LuaParser::RepeatStatContext::SEMI() {
  return getToken(LuaParser::SEMI, 0);
}


size_t LuaParser::RepeatStatContext::getRuleIndex() const {
  return LuaParser::RuleRepeatStat;
}

antlrcpp::Any LuaParser::RepeatStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitRepeatStat(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::RepeatStatContext* LuaParser::repeatStat() {
  RepeatStatContext *_localctx = _tracker.createInstance<RepeatStatContext>(_ctx, getState());
  enterRule(_localctx, 16, LuaParser::RuleRepeatStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(144);
    match(LuaParser::REPEAT);
    setState(145);
    block();
    setState(146);
    match(LuaParser::UNTIL);
    setState(147);
    exp(0);
    setState(149);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(148);
      match(LuaParser::SEMI);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatContext ------------------------------------------------------------------

LuaParser::IfStatContext::IfStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LuaParser::IfStatContext::IF() {
  return getToken(LuaParser::IF, 0);
}

std::vector<LuaParser::ExpContext *> LuaParser::IfStatContext::exp() {
  return getRuleContexts<LuaParser::ExpContext>();
}

LuaParser::ExpContext* LuaParser::IfStatContext::exp(size_t i) {
  return getRuleContext<LuaParser::ExpContext>(i);
}

std::vector<tree::TerminalNode *> LuaParser::IfStatContext::THEN() {
  return getTokens(LuaParser::THEN);
}

tree::TerminalNode* LuaParser::IfStatContext::THEN(size_t i) {
  return getToken(LuaParser::THEN, i);
}

std::vector<LuaParser::BlockContext *> LuaParser::IfStatContext::block() {
  return getRuleContexts<LuaParser::BlockContext>();
}

LuaParser::BlockContext* LuaParser::IfStatContext::block(size_t i) {
  return getRuleContext<LuaParser::BlockContext>(i);
}

tree::TerminalNode* LuaParser::IfStatContext::END() {
  return getToken(LuaParser::END, 0);
}

std::vector<tree::TerminalNode *> LuaParser::IfStatContext::ELSEIF() {
  return getTokens(LuaParser::ELSEIF);
}

tree::TerminalNode* LuaParser::IfStatContext::ELSEIF(size_t i) {
  return getToken(LuaParser::ELSEIF, i);
}

tree::TerminalNode* LuaParser::IfStatContext::ELSE() {
  return getToken(LuaParser::ELSE, 0);
}


size_t LuaParser::IfStatContext::getRuleIndex() const {
  return LuaParser::RuleIfStat;
}

antlrcpp::Any LuaParser::IfStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitIfStat(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::IfStatContext* LuaParser::ifStat() {
  IfStatContext *_localctx = _tracker.createInstance<IfStatContext>(_ctx, getState());
  enterRule(_localctx, 18, LuaParser::RuleIfStat);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(151);
    match(LuaParser::IF);
    setState(152);
    exp(0);
    setState(153);
    match(LuaParser::THEN);
    setState(154);
    block();
    setState(162);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LuaParser::ELSEIF) {
      setState(155);
      match(LuaParser::ELSEIF);
      setState(156);
      exp(0);
      setState(157);
      match(LuaParser::THEN);
      setState(158);
      block();
      setState(164);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(167);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LuaParser::ELSE) {
      setState(165);
      match(LuaParser::ELSE);
      setState(166);
      block();
    }
    setState(169);
    match(LuaParser::END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForStatContext ------------------------------------------------------------------

LuaParser::ForStatContext::ForStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LuaParser::ForStatContext::FOR() {
  return getToken(LuaParser::FOR, 0);
}

tree::TerminalNode* LuaParser::ForStatContext::NAME() {
  return getToken(LuaParser::NAME, 0);
}

tree::TerminalNode* LuaParser::ForStatContext::EQL() {
  return getToken(LuaParser::EQL, 0);
}

std::vector<LuaParser::ExpContext *> LuaParser::ForStatContext::exp() {
  return getRuleContexts<LuaParser::ExpContext>();
}
